Improves computation of IAccessible2 Hypertext.

1. Ensures that children that are in a different subtree are included in IA2 Hypertext.
2. Stops exposing the value of a rich text control in IA2 Hypertext.
BUG=614570
TESTED=NVDA,browser test
R=dmazzoni@chromium.org

Review-Url: https://codereview.chromium.org/2040523002
Cr-Commit-Position: refs/heads/master@{#398578}

Former-commit-id: a4f893a3ca5cd9fd001938fb455f1e0cde2877a5